--- a/english.html
+++ b/english.html
@@ -9300,7 +9300,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Skate park in Potsdam]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Revision in the kitchen]] [[Rosh Hashana dinner]] [[Matza ball soup]] [[2 Da Vinci]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9320,7 +9320,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230709152302864" title="$:/temp/search">
+<div created="20161023184814872" modified="20230726194235287" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9466,7 +9466,7 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
-<div created="20200217124916746" modified="20200217125410192" tags="[[Here in the Ghetto]] Metafiction Houses" title="2 Da Vinci">
+<div created="20200217124916746" modified="20230726193542002" tags="[[Here in the Ghetto]] Metafiction Houses" title="2 Da Vinci">
 <pre>[img[pictures/da-vinci-2.jpg]]
 
 
@@ -10668,7 +10668,7 @@ Dandan
 
 </pre>
 </div>
-<div created="20200215115804719" modified="20200324165818567" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens [[Hunky Dory]]" title="Chez Panisse">
+<div created="20200215115804719" modified="20230726194058279" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens [[Hunky Dory]]" title="Chez Panisse">
 <pre>!!![[Yoyo]]:
 
 Yes- [[he|Dandan]] wrote us another letter (August 2017), and I'm pasting it here as well:
@@ -11312,7 +11312,7 @@ I recommend a fascinating [[interview|https://www.youtube.com/watch?v=_7jgaAfWS6
  &lt;&lt;heblink [[דליקטסן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215113637898" modified="20230520113818298" tags="Meals Coffee Restaurants [[The kitchen by Genevieve]] Bread Cafés [[Cooks are dancers]]" title="Delicatessen Chez Genevieve">
+<div created="20200215113637898" modified="20230726193420585" tags="Meals Coffee Restaurants [[The kitchen by Genevieve]] Bread Cafés [[Cooks are dancers]]" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
 
 
@@ -12170,7 +12170,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 
 </pre>
 </div>
-<div created="20200225191512840" modified="20200225191856343" tags="[[Here in the Ghetto]] Houses" title="HaAarba`a 2">
+<div created="20200225191512840" modified="20230726194231768" tags="[[Here in the Ghetto]] Houses" title="HaAarba`a 2">
 <pre>[img[pictures/haarbaa2.jpg]]
 
 
@@ -12369,7 +12369,7 @@ On the first episodes, into the lives of the existing characters enters a fifth 
  &lt;&lt;heblink [[חינאווי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200220150514247" modified="20200503153849983" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]] Windows" title="Holiday psalms">
+<div created="20200220150514247" modified="20230726193924211" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]] Windows" title="Holiday psalms">
 <pre>[img[pictures/zemirot-chag.jpg]]
 
 
@@ -13622,7 +13622,7 @@ And tea is for the sick.
 
  &lt;&lt;heblink [[חומרים]]&gt;&gt;</pre>
 </div>
-<div created="20200215115312612" modified="20230520114710374" tags="Recipes [[Food addicts]] Meals [[Cooks are dancers]]" title="Matza ball soup">
+<div created="20200215115312612" modified="20230726193710341" tags="Recipes [[Food addicts]] Meals [[Cooks are dancers]]" title="Matza ball soup">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 
@@ -13755,7 +13755,7 @@ This generation is carrying on his back generations and generations of unconscio
 
  &lt;&lt;heblink [[דור הנפש]]&gt;&gt;</pre>
 </div>
-<div created="20220411121317730" modified="20220411121928567" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Merkaz Ba'alei Melaha 6">
+<div created="20220411121317730" modified="20230726193218042" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Merkaz Ba'alei Melaha 6">
 <pre>[img[pictures/MerkazBa'aleiMelaha.jpg]]
 
 
@@ -14227,7 +14227,7 @@ It seemed like, everything is fine''
 
 </pre>
 </div>
-<div created="20211212202829463" modified="20211212203057109" tags="Kitchens Houses [[On the road to somewhere]] Baking Mothers [[True stories]]" title="One thought ater another">
+<div created="20211212202829463" modified="20230726193818196" tags="Kitchens Houses [[On the road to somewhere]] Baking Mothers [[True stories]]" title="One thought ater another">
 <pre>[img[pictures/onethoughtafteranother.jpg]]
 
 
@@ -14952,7 +14952,7 @@ We all inherited from [[Gura]] the tendency to pick up thrown away furniture or 
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
-<div created="20200219163524836" modified="20230520115456805" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]] [[Hunky Dory]] Closers [[Cooks are dancers]]" title="Revision in the kitchen">
+<div created="20200219163524836" modified="20230726194146984" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]] [[Hunky Dory]] Closers [[Cooks are dancers]]" title="Revision in the kitchen">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
 
 
@@ -15058,7 +15058,7 @@ The building, the strings and what's between them.
 
  &lt;&lt;heblink [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]]&gt;&gt;</pre>
 </div>
-<div created="20200215111759981" modified="20200219181335965" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
+<div created="20200215111759981" modified="20230726194005451" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[Yoyo]]:
@@ -15353,7 +15353,6 @@ I really love the Fishers and the rest of the characters. They are embodied by c
 </div>
 <div created="20230717103053671" modified="20230717103525481" tags="[[On the road to somewhere]] [[Outer sisters]]" title="Skate park in Potsdam">
 <pre>
-
 
 [img[pictures/skateparkinpotsdam.jpg]]
 
