--- a/index.html
+++ b/index.html
@@ -9388,7 +9388,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סקייט פארק בפוטסדאם]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פאי נקטרין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9408,7 +9408,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230709152352275" title="$:/temp/search">
+<div created="20161023184814872" modified="20230729121943383" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -18299,9 +18299,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Spiral]]&gt;&gt;</pre>
 </div>
 <div created="20230717103251264" modified="20230717104229800" tags="[[בדרך לאן שהוא]] [[אחיות חוץ]]" title="סקייט פארק בפוטסדאם">
-<pre>
-
-[img[pictures/skateparkinpotsdam.jpg]]
+<pre>[img[pictures/skateparkinpotsdam.jpg]]
 
 [[אימא של ג'אזז]]:
 
@@ -18792,7 +18790,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Semolina cake]]&gt;&gt;
 </pre>
 </div>
-<div created="20170702161916288" modified="20200813153949563" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="עוגת פרג שוקולד">
+<div created="20170702161916288" modified="20230729121317882" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="עוגת פרג שוקולד">
 <pre>[img[pictures/pereg-shokolad.jpg
 ]]
 
@@ -19497,7 +19495,7 @@ May the lord bless your soul, I love you girl
 &lt;&lt;englink [[Cherry pie]]&gt;&gt;
 </pre>
 </div>
-<div created="20170629220725238" modified="20210408201226284" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
+<div created="20170629220725238" modified="20230729122008229" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
 <pre>[img[pictures/pie-naktarin.jpg]]
 
 !!![[אווה|אווה כהן]]:
