--- a/english.html
+++ b/english.html
@@ -1355,6 +1355,8 @@ Error message and password prompt
 
 <li>When they sleep</li>
 
+<li>While listening to the news</li>
+
 <li>White rice with pine nuts</li>
 
 <li>Windows</li>
@@ -9302,7 +9304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Getting ready]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[While listening to the news]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11714,7 +11716,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231018162904240" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20231019181939794" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11976,9 +11978,7 @@ Gesund-Heights is the prime arena of [[everything that (might have) occurred and
 </pre>
 </div>
 <div created="20231018162814230" modified="20231018164121582" tags="Trees [[On the road to somewhere]] Houses [[Food addicts]] [[Dreams that we've dreamt]]" title="Getting ready">
-<pre>
-
-[img[pictures/gettingready.jpg]]
+<pre>[img[pictures/gettingready.jpg]]
 
 
  &lt;&lt;heblink [[מתכוננים]]&gt;&gt;</pre>
@@ -15362,8 +15362,7 @@ I really love the Fishers and the rest of the characters. They are embodied by c
 </pre>
 </div>
 <div created="20230717103053671" modified="20230717103525481" tags="[[On the road to somewhere]] [[Outer sisters]]" title="Skate park in Potsdam">
-<pre>
-[img[pictures/skateparkinpotsdam.jpg]]
+<pre>[img[pictures/skateparkinpotsdam.jpg]]
 
 
 
@@ -17271,6 +17270,14 @@ The great thing that happened lately is, that [[my Iris|Iris the daughter]] came
 
 &lt;&lt;heblink [[כשהם ישנים]]&gt;&gt;
 </pre>
+</div>
+<div created="20231019181801320" modified="20231019182648281" tags="[[Here in the Ghetto]] TV" title="While listening to the news">
+<pre>[img[pictures/whilelistening.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[While listening to the news]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[כשמקשיבה לחדשות]]&gt;&gt;</pre>
 </div>
 <div created="20200306133918926" modified="20200326100626143" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="White rice with pine nuts">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
