--- a/index.html
+++ b/index.html
@@ -943,6 +943,8 @@ Error message and password prompt
 
 <li>כשהמכוניות היו יפות</li>
 
+<li>כשמקשיבה לחדשות</li>
+
 <li>כשנשאר בצק פריך</li>
 
 <li>כשנשאר בצק פריך 2</li>
@@ -9390,7 +9392,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מתכוננים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשמקשיבה לחדשות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10889,7 +10891,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231018163701476" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
+<div created="20171216194951924" modified="20231019182141861" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15693,6 +15695,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When the cars were pretty]]&gt;&gt;
 </pre>
 </div>
+<div created="20231019181633015" modified="20231019182625263" tags="[[כאן בגטו]] טלוויזיה" title="כשמקשיבה לחדשות">
+<pre>[img[pictures/whilelistening.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[כשמקשיבה לחדשות]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[While listening to the news]]&gt;&gt;
+</pre>
+</div>
 <div created="20190305120006619" modified="20200813153801176" tags="[[כשהם ישנים]] מתכונים אפייה" title="כשנשאר בצק פריך">
 <pre>[img[pictures/keshenishar-bazek-parich.jpg]]
 
@@ -17664,8 +17674,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20231018162626685" modified="20231018163954013" tags="ארוחות [[בדרך לאן שהוא]] בתים עצים [[חיות אוכל]] [[חלומות שחלמנו]]" title="מתכוננים">
-<pre>
-[img[pictures/gettingready.jpg]]
+<pre>[img[pictures/gettingready.jpg]]
 
 
 &lt;&lt;englink [[Getting ready]]&gt;&gt;</pre>
