--- a/english.html
+++ b/english.html
@@ -9304,7 +9304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[While listening to the news]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11977,7 +11977,7 @@ Gesund-Heights is the prime arena of [[everything that (might have) occurred and
  &lt;&lt;heblink [[געזונטהייטס]]&gt;&gt;
 </pre>
 </div>
-<div created="20231018162814230" modified="20231018164121582" tags="Trees [[On the road to somewhere]] Houses [[Food addicts]] [[Dreams that we've dreamt]]" title="Getting ready">
+<div created="20231018162814230" modified="20231020085546005" tags="Trees [[On the road to somewhere]] Houses [[Food addicts]] [[Dreams that we've dreamt]] [[While listening to the news]]" title="Getting ready">
 <pre>[img[pictures/gettingready.jpg]]
 
 
