--- a/index.html
+++ b/index.html
@@ -9392,7 +9392,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשמקשיבה לחדשות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -17673,7 +17673,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20231018162626685" modified="20231018163954013" tags="ארוחות [[בדרך לאן שהוא]] בתים עצים [[חיות אוכל]] [[חלומות שחלמנו]]" title="מתכוננים">
+<div created="20231018162626685" modified="20231020085501888" tags="ארוחות [[בדרך לאן שהוא]] בתים עצים [[חיות אוכל]] [[חלומות שחלמנו]] [[כשמקשיבה לחדשות]]" title="מתכוננים">
 <pre>[img[pictures/gettingready.jpg]]
 
 
