--- a/english.html
+++ b/english.html
@@ -743,6 +743,8 @@ Error message and password prompt
 
 <li>Keyboard</li>
 
+<li>Kibbutz Beeri massacre</li>
+
 <li>Killing Eve</li>
 
 <li>Kiryat Sefer Park</li>
@@ -9304,7 +9306,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Kibbutz Beeri massacre]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9324,7 +9326,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20231016162433844" title="$:/temp/search">
+<div created="20161023184814872" modified="20231101170241301" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11716,7 +11718,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231019181939794" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20231104141538452" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12992,6 +12994,16 @@ A good friend''
  &lt;&lt;heblink [[מקלדת]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20231104141243210" modified="20231104141601440" tags="[[While listening to the news]] Trees Houses" title="Kibbutz Beeri massacre">
+<pre>
+
+
+[img[pictures/kibbutzbeeri.jpg]]
+
+
+
+ &lt;&lt;heblink [[קיבוץ בארי אחרי השבת השחורה]]&gt;&gt;</pre>
 </div>
 <div created="20200226103744594" modified="20200623163443227" tags="TV [[TV Series]]" title="Killing Eve">
 <pre>[img[pictures/killing-eve.jpg]]
