--- a/index.html
+++ b/index.html
@@ -1413,6 +1413,8 @@ Error message and password prompt
 
 <li>קופים ממונעים</li>
 
+<li>קיבוץ בארי אחרי השבת השחורה</li>
+
 <li>קנלוני</li>
 
 <li>קפה</li>
@@ -9392,7 +9394,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קיבוץ בארי אחרי השבת השחורה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10891,7 +10893,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231019182141861" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
+<div created="20171216194951924" modified="20231104141626509" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -20461,6 +20463,14 @@ Fapina''
 
 
 &lt;&lt;englink [[Monkeys with car keys]]&gt;&gt;</pre>
+</div>
+<div created="20231104141053387" modified="20231104141708729" tags="[[כשמקשיבה לחדשות]] עצים" title="קיבוץ בארי אחרי השבת השחורה">
+<pre>
+
+[img[pictures/kibbutzbeeri.jpg]]
+
+
+&lt;&lt;englink [[Kibbutz Beeri massacre]]&gt;&gt;</pre>
 </div>
 <div created="20180212123730869" modified="20200307165759734" tags="[[חיות אוכל]] מתכונים" title="קנלוני">
 <pre>[img[pictures/cannelloni.jpg]]
